HighContrast: fix scrollbar slider 'padding'

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -1380,7 +1380,7 @@ GtkTreeView.view.progressbar { //Progressbar in treeview cells
   &.trough { @extend .scrollbars-junction; }
   &.slider {
     border-radius: 20px;
-    border: 3px solid transparent; //margin :/
+    border: 5px solid transparentize(mix($bg_color, $fg_color, 50%),0.99); //margin :/
     background-color: mix($bg_color, $fg_color, 50%);
     &:backdrop, &:insensitive {
       background-color: mix($bg_color, $fg_color, 90%);
@@ -1392,7 +1392,7 @@ GtkTreeView.view.progressbar { //Progressbar in treeview cells
       background-color: $selected_bg_color;
     }
     &.fine-tune {
-      border-width: 5px;
+      border-width: 8px;
       &:prelight:active {
         background-color: $selected_bg_color;
       }
